- shield/weapon arming/disarming and panic button rework, also fix its status on loadgame
- docs: more events/logs system documenting
- code: use constants for alert mode, cleanup whitespace
v 0.1.6
- fix bugs in logic deciding when aliens attack
- fix bugs with Sengzhac log not showing and not being able to scroll over it
- docs: document events/logs system
- fix race condition when installing/removing shield
- fix cargo skip of weight check for some items
- code: use constants for delayes, shiptypes, jobtypes, wandering alien action/orders and cargo items to further improve readability
- combat: fix alien (with reflective hull) damage calculations
v 0.1.5
- combat: various shield handling fixes
- code: use constants instead of numbers for few types to improve readability
- combat: enemy can only fire if their weapons subsystem is not destroyed and there is some power
- update most of the tools to correctly rebuild binary files in data/
- check coordinates better in combat to avoid possible crash
v 0.1.4
- fix crash when attempting to scroll empty Ship Logs list (for example Ship Logs: Cache)
- docs: debug hints in Documents/debug_notes.md
- fix scroll/display problem in Ship Logs in some cases
- fix display problem with negative cargo space
- fix display problem when loading savegame with pending events
- fix bug in Sector map when jumping to deep space near some planet
- Sector map: keyboard shortcut 'J' to jump to selected coordinates
- code: updates *.d to D version 2.0, so it can be compiled with modern ldc/gdc in Debian Buster
v 0.1.3
- code: remove mymove(), use sizeof() for buffer sizes
v 0.1.2
- code: remove unused modules, fix code warnings, smarter variable initialization
v 0.1.1
- update build and other docs
v 0.1.0
- code: apply (mostly non-functional) changes from v1.30.0001 ( https://github.com/karynax/ironseed )
- code: use typed pointers for better checks
- avoid double SDL initialization bugs